src/main/scala/chapter5/output/RunNotAllowed.output
// #output
NotAllowed.scala:4: error: type mismatch;
 found   : Array[Int]
 required: Array[Any]
Note: Int <: Any, but class Array is invariant in type T.
You may wish to investigate a wildcard type such as `_ <: Any`. (SLS 
3.2.10)
arr2 = arr1 // Compilation ERROR
       ^
one error found
// #output

